--- a/src/main/resources/templates/provider/providerShow.html
+++ b/src/main/resources/templates/provider/providerShow.html
@@ -125,39 +125,41 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('persona')">
-				<div class="tile-stats">
-					<div class="icon"><i class="fa fa-user-md"></i></div>
-					<div class="col-xs-10">
-	                	<div class="count" th:text="#{label.persone}"></div>
-	                	<p class="count-text" th:text="#{label.visualizza_lista_persone}">Visualizza la lista di tutte le persone</p>
+			<div class="col-xs-12 tile-stats-container">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('persona')">
+					<div class="tile-stats">
+						<div class="icon"><i class="fa fa-user-md"></i></div>
+						<div class="col-xs-10">
+		                	<div class="count" th:text="#{label.persone}"></div>
+		                	<p class="count-text" th:text="#{label.visualizza_lista_persone}">Visualizza la lista di tutte le persone</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('accreditamento')">
-				<div class="tile-stats">
-					<div class="icon"><i class="fa fa-clipboard"></i></div>
-					<div class="col-xs-10">
-	                	<div class="count" th:text="#{label.accreditamenti}"></div>
-	                	<p class="count-text" th:text="#{label.visualizza_lista_accreditamenti}">Visualizza la lista di tutte gli accreditamenti</p>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('accreditamento')">
+					<div class="tile-stats">
+						<div class="icon"><i class="fa fa-clipboard"></i></div>
+						<div class="col-xs-10">
+		                	<div class="count" th:text="#{label.accreditamenti}"></div>
+		                	<p class="count-text" th:text="#{label.visualizza_lista_accreditamenti}">Visualizza la lista di tutte gli accreditamenti</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('evento')">
-				<div class="tile-stats">
-					<div class="icon"><i class="fa fa-calendar"></i></div>
-					<div class="col-xs-10">
-	                	<div class="count" th:text="#{label.eventi}"></div>
-	                	<p class="count-text" th:text="#{label.visualizza_lista_eventi}">Visualizza la lista di tutti gli eventi</p>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('evento')">
+					<div class="tile-stats">
+						<div class="icon"><i class="fa fa-calendar"></i></div>
+						<div class="col-xs-10">
+		                	<div class="count" th:text="#{label.eventi}"></div>
+		                	<p class="count-text" th:text="#{label.visualizza_lista_eventi}">Visualizza la lista di tutti gli eventi</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('allegato')">
-				<div class="tile-stats">
-					<div class="icon"><i class="fa fa-paperclip"></i></div>
-					<div class="col-xs-10">
-	                	<div class="count" th:text="#{label.allegati}"></div>
-	                	<p class="count-text" th:text="#{label.visualizza_lista_allegati}">Visualizza la lista di tutti gli allegati</p>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 clickable" onclick="show('allegato')">
+					<div class="tile-stats">
+						<div class="icon"><i class="fa fa-paperclip"></i></div>
+						<div class="col-xs-10">
+		                	<div class="count" th:text="#{label.allegati}"></div>
+		                	<p class="count-text" th:text="#{label.visualizza_lista_allegati}">Visualizza la lista di tutti gli allegati</p>
+						</div>
 					</div>
 				</div>
 			</div>
