--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -371,7 +371,7 @@
 											<div class="col-xs-12">
 												<div class="x_panel">
 													<div class="x_title">
-														<h2 th:text="#{label.inserimento_piano_formativo(${accreditamentoWrapper.pianoFormativo})}">Piano formativo relativo all'anno xxx</h2>
+														<h2 th:text="#{label.inserimento_piano_formativo(${accreditamentoWrapper.accreditamento.pianoFormativo})}">Piano formativo relativo all'anno xxx</h2>
 														<div class="pull-right buttons-header">
 															<a class="btn btn-primary"
 															th:if="${!accreditamentoWrapper.canSend}"
@@ -400,7 +400,7 @@
 																</tr>
 															</tbody>
 														</table>
-														<a th:if="${accreditamentoWrapper.editabile}" th:text="#{label.aggiungi_evento}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${accreditamentoWrapper?.accreditamento.id}/provider/${accreditamentoWrapper?.provider.id}/evento/new?pianoFormativo=${accreditamentoWrapper?.pianoFormativo}|}"></a>
+														<a th:if="${accreditamentoWrapper.accreditamento.editabile}" th:text="#{label.aggiungi_evento}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${accreditamentoWrapper?.accreditamento.id}/provider/${accreditamentoWrapper?.provider.id}/evento/new?pianoFormativo=${accreditamentoWrapper?.accreditamento.pianoFormativo}|}"></a>
 													</div>
 												</div>
 											</div>
