distinzione provider/show e provider/show/all

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -46,7 +46,7 @@
 									<span class="fa fa-chevron-down"></span>
 								</a>
 								<ul class="nav child_menu" style="display: none">
-									<li><a th:href="@{/provider/show}" th:text="#{label.scheda_provider}">label.info_provider</a></li>
+									<li><a th:href="@{/provider/show/all}" th:text="#{label.scheda_provider}">label.info_provider</a></li>
 									<li><a th:href="@{/provider/accreditamento/list}" th:text="#{label.accreditamento}">label.iter_accreditamento</a></li>
 									<!--
 									<li><a href="#" th:text="#{label.eventi}">label.eventi</a></li>
