Link a pagina per mostrare la demo di valutazione

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -68,6 +68,7 @@
 									<li><a th:href="@{/provider/list}" th:text="#{label.provider}">label.provider</a></li>
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/profile/list}" th:text="#{label.profili}">label.profili</a></li>
+									<li><a th:href="@{/valutazioneDemo}" th:text="#{label.demoValutazione}">label.demoValutazione</a></li>
 								</ul>
 							</li>
 
