--- a/src/main/resources/templates/segreteria/valutazione.html
+++ b/src/main/resources/templates/segreteria/valutazione.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.validazione}">label.validazione</h2>
+						<h2 th:text="#{label.valutazione}">label.valutazione</h2>
 						<div class="pull-right buttons-header">
 							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
 							<button id="other-validation-btn" class="btn btn-primary pull-right" th:text="#{label.visualizza_altri}" data-toggle="modal" data-target=".modal-validate"></button>
@@ -25,17 +25,17 @@
 								<div class="modal-header">
 									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
 									</button>
-									<h4 class="modal-title" id="myModalLabel" th:text="#{label.stato_validazione}">label.stato_validazione</h4>
+									<h4 class="modal-title" id="myModalLabel" th:text="#{label.valutazioni_precedenti}">label.valutazioni_precedenti</h4>
 								</div>
 								<div class="modal-body">
 									<table id="tabella-modale" class="datatable-responsive-search-validation table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 										<thead>
 											<tr>
 												<th th:text="#{label.id}">label.id</th>
-												<th th:text="#{label.valutatore1}">Nome</th>
-												<th th:text="#{label.valutatore2}">Nome</th>
-												<th th:text="#{label.valutatore3}">Nome</th>
-												<th th:text="#{label.valutatore4}">Nome</th>
+												<th th:text="#{label.valutatore}">Nome</th>
+												<th th:text="#{label.valutatore}">Nome</th>
+												<th th:text="#{label.valutatore}">Nome</th>
+												<th th:text="#{label.valutatore}">Nome</th>
 											</tr>
 										</thead>
 										<tbody>
