creata distinzione show e edit del provider

--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -24,7 +24,7 @@
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(providerList)}" th:remove="all-but-first">
 								<tr th:each="provider : ${providerList}">
-									<th><a th:text="${provider.denominazioneLegale}" th:href="@{|/provider/${provider.id}/show|}">3d informatica</a></th>
+									<th><a th:text="${provider.denominazioneLegale}" th:href="@{|/provider/${provider.id}/show/all|}">3d informatica</a></th>
 									<th th:text="${provider.partitaIva != null} ? ${provider.partitaIva} : ${provider.codiceFiscale}">RTFEWE03543534 o IVA4353425345321</th>
 									<th th:text="${provider.gruppo}">informatica</th>
 								</tr>
@@ -42,4 +42,4 @@
 	</div>
 </body>
 </html>
-	
+
