--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -13,174 +13,18 @@
 					<div class="x_title">
 						<h2 th:text="${sedeWrapper.tipologiaSede == 'SedeLegale'} ? #{label.sede_legale} : #{label.sede_operativa}">label.info_sede</h2>
 						<div class="pull-right buttons-header">
-							<th:block th:unless="${#lists.isEmpty(sedeWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
-								<button class="btn btn-primary pull-right" onclick="loadSedeLegale()" th:if="${sedeWrapper.tipologiaSede == 'SedeOperativa'}" th:text="#{label.coincide_con_sede_legale}"></button>
+							<th:block th:unless="${(#lists.size(sedeWrapper.idEditabili) == 1) and #lists.contains(sedeWrapper.idEditabili, 0)}">
+								<button th:unless="${#lists.contains(sedeWrapper.idEditabili, 0)}" class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
+								<button th:unless="${#lists.contains(sedeWrapper.idEditabili, 0)}" class="btn btn-primary pull-right" onclick="loadSedeLegale()" th:if="${sedeWrapper.tipologiaSede == 'SedeOperativa'}" th:text="#{label.coincide_con_sede_legale}"></button>
 								<a class="btn btn-primary pull-right" th:text="#{label.nuovo}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/provider/${sedeWrapper.providerId}/sede/new?tipologiaSede=${sedeWrapper.tipologiaSede}|}"></a>
 							</th:block>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
-					
-					<div class="x_content">
-						<form id="formSede" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${sedeWrapper.accreditamentoId}/provider/${sedeWrapper.providerId}/sede/save|}"
-								method="post" enctype="multipart/form-data" novalidate="novalidate">
-								
-							<input type="hidden" name="editId" th:value="${sedeWrapper.sede.id}" />
-							<input type="hidden" th:field="${sedeWrapper.accreditamentoId}" />
-							<input type="hidden" th:field="${sedeWrapper.tipologiaSede}" />
-							<input type="hidden" th:field="${sedeWrapper.idEditabili}" />
-							<input type="hidden" th:field="${sedeWrapper.idOffset}" />
-							
-							<!-- provincia -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.provincia')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">1</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="provincia_sede"><span th:text="#{label.provincia}">Provincia</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">	
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<select id="provincia_sede" class="form-control required" th:field="${sedeWrapper.sede.provincia}">
-			                          			<option value="" th:text="#{label.seleziona}">label.seleziona</option>
-			                          			<option th:each="provincia : ${elencoProvince}" th:value="${provincia}" th:text="${provincia}">Choose option</option>
-			                        	</select>
-								  	</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="provincia_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.provincia}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.provincia')}" class="alert" th:errors="${sedeWrapper.sede.provincia}"></div>
-							</div>
-							
-							<!-- comune -->
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.comune')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">2</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="comune_sede"><span th:text="#{label.comune}">Comune</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<select id="comune_sede" class="form-control required" th:field="${sedeWrapper.sede.comune}">
-											<option th:value="${sedeWrapper.sede.comune}" th:text="${sedeWrapper.sede.comune}"/>
-			                        	</select>
-								  	</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="comune_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.comune}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.comune')}" class="alert" th:errors="${sedeWrapper.sede.comune}"></div>
-							</div>
-								
-							<!-- indirizzo -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.indirizzo')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">3</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="indirizzo_sede"><span th:text="#{label.indirizzo}">Indirizzo</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<input id="indirizzo_sede" name="indirizzo_sede"
-											required="required" class="form-control col-md-7 col-xs-12"
-											type="text" th:field="${sedeWrapper.sede.indirizzo}" />
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="indirizzo_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.indirizzo}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.indirizzo')}" class="alert" th:errors="${sedeWrapper.sede.indirizzo}"></div>
-							</div>
-							
-							<!-- CAP -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.cap')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">4</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="CAP_sede"><span th:text="#{label.cap}">CAP</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<select id="CAP_sede" class="form-control required" th:field="${sedeWrapper.sede.cap}">
-											<option th:value="${sedeWrapper.sede.cap}" th:text="${sedeWrapper.sede.cap}"/>
-			                        	</select>
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="CAP_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.cap}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.cap')}" class="alert" th:errors="${sedeWrapper.sede.cap}"></div>
-							</div>
-							
-							<!-- telefono -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.telefono')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">5</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="telefono_sede"><span th:text="#{label.telefono}">Telefono</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<input id="telefono_sede" name="telefono_sede"
-											required="required" class="form-control col-md-7 col-xs-12"
-											type="tel" th:field="${sedeWrapper.sede.telefono}"/>
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="telefono_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.telefono}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.telefono')}" class="alert" th:errors="${sedeWrapper.sede.telefono}"></div>
-							</div>
-							
-							<!-- FAX -->
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.fax')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">7</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="fax_sede"><span th:text="#{label.fax}">FAX</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<input id="fax_sede" name="fax_sede" required="required"
-											class="form-control col-md-7 col-xs-12" type="tel" th:field="${sedeWrapper.sede.fax}" />
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="fax_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.fax}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.fax')}" class="alert" th:errors="${sedeWrapper.sede.fax}"></div> 	
-							</div>
-							
-							<!-- email -->
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.email')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${++counter}">8</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11"
-									for="email_sede"><span th:text="#{label.email}">E-mail</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<input id="email_sede" name="email_sede"
-											required="required" class="form-control col-md-7 col-xs-12"
-											type="email" th:field="${sedeWrapper.sede.email}"/>
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="email_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${sedeWrapper.sede.email}"></label>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('sedeWrapper.sede.email')}" class="alert" th:errors="${sedeWrapper.sede.email}"></div>
-							</div>	
-						</form>
-					</div>
+
+					<th:block th:include="sede/sedeFragment :: sede(true)"></th:block>
+
 				</div>
 			</div>
 			<script th:inline="javascript">
@@ -189,7 +33,7 @@
 				$.get( "/comuni?provincia=" + provincia, function(data){
 					$("#comune_sede").empty();
 					$("#comune_sede").append('<option value = "">' + "---" + "</option>")
-					
+
 					for(item in data){
 						console.log(item);
 						var option = '<option value = "' + data[item] + '">' + data[item] + "</option>";
@@ -202,7 +46,7 @@
 				$.get( "/cap?comune=" + comune, function(data){
 					$("#CAP_sede").empty();
 					$("#CAP_sede").append('<option value = "">' + "---" + "</option>")
-					
+
 					for(item in data){
 						console.log(item);
 						var option = '<option value = "' + data[item] + '">' + data[item] + "</option>";
@@ -210,13 +54,13 @@
 					}
 				});
 			};
-			
-			
+
+
 			function loadSedeLegale(){
 				var url = "/accreditamento/" + [[${sedeWrapper.accreditamentoId}]] + "/provider/" + [[${sedeWrapper.providerId}]] + "/sede/copia";
 				$("#main-container").load(url);
 			}
-			
+
 			$(document).ready(
 				function() {
 					$("#provincia_sede").click(function() {
