--- a/src/main/resources/templates/sede/sedeShow.html
+++ b/src/main/resources/templates/sede/sedeShow.html
@@ -3,6 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	layout:decorator="fragments/template">
 <head lang="it">
+
 </head>
 <body>
 	<div layout:fragment="content">
@@ -10,43 +11,15 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h1>
-							<span th:text="#{label.sede_di}" th:remove="tag">Sede di </span><span
-								th:remove="tag">nomeProvider</span>
-						</h1>
+						<h2 th:text="${sedeWrapper.tipologiaSede == 'SedeLegale'} ? #{label.sede_legale} : #{label.sede_operativa}">label.info_sede</h2>
+						<div class="pull-right buttons-header">
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}|}"></a>
+						</div>
 						<div class="clearfix"></div>
 					</div>
-					<div class="x_content">
-						<div class="col-md-9 col-sm-9 col-xs-12">
 
-							<ul class="fontawesome-icon-list list-unstyled user_data">
+					<th:block th:include="sede/sedeFragment :: sede(true)"></th:block>
 
-								<li><i class="fa fa-map-marker"></i>  <span
-									th:text="#{label.comune}"> Comune</span>:</li>
-
-								<li><i class="fa fa-map-marker"></i>  <span
-									th:text="#{label.provincia}"> Provincia</span>:</li>
-
-								<li><i class="fa fa-map-marker"></i>  <span
-									th:text="#{label.indirizzo}"> Indirizzo</span>:</li>
-
-								<li><i class="fa fa-phone-square"></i> <span
-									th:text="#{label.telefono}"> Telefono</span>:</li>
-
-								<li><i class="fa fa-phone"></i> <span
-									th:text="#{label.tel_secondario}"> Telefono secondario</span>:</li>
-
-								<li><i class="fa fa-at"></i> <span th:text="#{label.email}">
-										Email</span>:</li>
-
-								<li><i class="fa fa-fax"></i> <span th:text="#{label.fax}">
-										FAX</span>:</li>
-
-								<li><i class="fa fa-envelope-o"></i> <span
-									th:text="#{label.cap}"> CAP</span>:</li>
-							</ul>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
