--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
@@ -5,26 +5,22 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" th:with="counter=${accreditamentoAllegatiWrapper.idOffset - 1}">
+	<div layout:fragment="content">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
-							<th:block th:unless="${#lists.isEmpty(accreditamentoAllegatiWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamentoAllegati" type="submit"></button>
-							</th:block>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(true)"></th:block>
+					<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(false)"></th:block>
 
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
-</html>
